# motor-benchmarks

./: .gitignore  README.md  pyproject.toml  test_hardware.py
test_all_analog/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_full_capture/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_integration/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json  rpm.csv
test_pwm_20pct/: capture_stdout.txt  record_options.json  record_result.json
test_pwm_capture/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_pwm_check/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_voltage_10x/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_voltage_1x/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_vr_10/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_vr_100/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_vr_20/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_vr_5/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_vr_50/: capture_config_full.json  capture_stdout.txt  record_options.json  record_result.json
test_vrange_10v/: capture_config_full.json  capture_stdout.txt  record_options.json  (+1 more)
(+12 files in other folders)
